meja/tests/typ-deriving.stderr
File "tests/typ-deriving.meja", line 1, characters 0-30:
Error: Unbound type constructor Field.Var.t.
